fix: correção de bugs em DummyRelatorioAlimentos e em TelaEditarFilme